--- a/A5/src/Makefile
+++ b/A5/src/Makefile
@@ -1,9 +1,9 @@
 SOURCES = $(wildcard *.cpp)
 OBJECTS = $(SOURCES:.cpp=.o)
 DEPENDS = $(SOURCES:.cpp=.d)
-LDFLAGS = $(shell pkg-config --libs lua5.1) -llua5.1 -lpng 
-CPPFLAGS = $(shell pkg-config --cflags lua5.1) 
-CXXFLAGS = $(CPPFLAGS) -W -Wall -O2
+LDFLAGS = $(shell pkg-config --libs lua) -llua -lpng -L/usr/local/opt/libpng/lib
+CPPFLAGS = $(shell pkg-config --cflags lua) -I/usr/local/opt/libpng/include
+CXXFLAGS = $(CPPFLAGS) -W -Wall -g
 CXX = g++
 MAIN = rt
 
